--- a/main/res/values/colors.xml
+++ b/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="goodDark">#424242</color>
+    <color name="trans">#FF000000</color>
+
+
 </resources>
